--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -37,6 +38,8 @@
         <activity android:name=".OSMActivity" >
         </activity>
         <activity android:name=".activities.ListTreesActivity" >
+        </activity>
+        <activity android:name=".activities.TreeInfoActivity" >
         </activity>
     </application>
 
