--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,27 +20,28 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity android:name=".LoginActivity" >
-
-        </activity>
-        <activity android:name=".AddTreeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddTreeActivity" >
+        </activity>
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
         <activity android:name=".MainActivity" >
+
         </activity>
         <activity android:name=".OSMActivity" >
         </activity>
         <activity android:name=".activities.ListTreesActivity" >
         </activity>
         <activity android:name=".activities.TreeInfoActivity" >
-
+        </activity>
+        <activity android:name=".activities.ImageFullScreenActivity" >
         </activity>
     </application>
 
